fix: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,29 @@
-# -- Go Server --
-
 # Mongo DB
-MONGODB_URI=""
+MONGODB_URI=
 
 # Redis
-REDIS_URI=""
-REDIS_USERNAME=""
-REDIS_PASSWORD=""
-REDIS_PORT=""
+REDIS_URI=
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_PORT=
 
 # URL
-FRONTEND_URL=""
-BACKEND_URL=""
+FRONTEND_URL=
+BACKEND_URL=
+
+# Port
+PORT=
 
 # Aws account
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
-AWS_REGION=""
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
 
 # Aws sqs
-AWS_SQS_URL=""
-AWS_SQS_USER_URL="${AWS_SQS_URL}/"
-AWS_SQS_RESULT_URL="${AWS_SQS_URL}/"
-AWS_SQS_DEADLETTERQUEUE_URL="${AWS_SQS_URL}/"
+AWS_SQS_URL=
+AWS_SQS_PUBLISHER="${AWS_SQS_URL}/"
+AWS_SQS_RECEIVER_URL="${AWS_SQS_URL}/"
 
-TOKEN_KEY=""
-CHATBOT_PORT=""
-
-# Firebase
-FIREBASE_KEY=""
+# Firebase - 
+SECRET_NAME=
+CREDENTIALS_PATH=
